--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
             <scope>system</scope>
             <systemPath>${basedir}/lib/NXOpen.jar</systemPath>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
